--- a/SOURCES/nagiosbp-rgm/nagiosbp.conf
+++ b/SOURCES/nagiosbp-rgm/nagiosbp.conf
@@ -1,34 +1,34 @@
-ScriptAlias /nagiosbp/cgi-bin "/srv/eyesofnetwork/nagiosbp/sbin"
-<Directory "/srv/eyesofnetwork/nagiosbp/sbin">
+ScriptAlias /nagiosbp/cgi-bin "/srv/rgm/nagiosbp/sbin"
+<Directory "/srv/rgm/nagiosbp/sbin">
 	Options ExecCGI
 	AuthType Basic
 	AuthName "Restricted"
-	AuthEonAuthoritative On
-	AuthEonMySQLSocket /var/lib/mysql/mysql.sock
-	AuthEonMySQLUsername eonweb
-	AuthEonMySQLPassword root66
-	AuthEonMySQLDB eonweb
-	AuthEonMySQLTableSID sessions,users,groupright
-	AuthEonMySQLFieldUID sessions.user_id
-	AuthEonMySQLTableSIDCondition "`sessions`.`session_id`=$session_id AND `sessions`.`user_id`=$user_id AND `users`.`user_id`=$user_id AND `users`.`user_name`=$user_name AND `users`.`group_id`=$group_id AND `groupright`.`group_id`=$group_id AND `groupright`.`tab_2`='1'"
-	AuthEonPageLogin /login.php
-	AuthEonSessionCookies On
+	AuthrgmAuthoritative On
+	AuthrgmMySQLSocket /var/lib/mysql/mysql.sock
+	AuthrgmMySQLUsername rgminternal
+	AuthrgmMySQLPassword 0rd0-c0m1735-b47h0n143
+	AuthrgmMySQLDB rgmweb
+	AuthrgmMySQLTableSID sessions,users,groupright
+	AuthrgmMySQLFieldUID sessions.user_id
+	AuthrgmMySQLTableSIDCondition "`sessions`.`session_id`=$session_id AND `sessions`.`user_id`=$user_id AND `users`.`user_id`=$user_id AND `users`.`user_name`=$user_name AND `users`.`group_id`=$group_id AND `groupright`.`group_id`=$group_id AND `groupright`.`tab_2`='1'"
+	AuthrgmPageLogin /login.php
+	AuthrgmSessionCookies On
 	Require valid-user
 </Directory>
 
-Alias /nagiosbp "/srv/eyesofnetwork/nagiosbp/share"
-<Directory "/srv/eyesofnetwork/nagiosbp/share">
+Alias /nagiosbp "/srv/rgm/nagiosbp/share"
+<Directory "/srv/rgm/nagiosbp/share">
 	AuthType Basic
 	AuthName "Restricted"
-	AuthEonAuthoritative On
-	AuthEonMySQLSocket /var/lib/mysql/mysql.sock
-	AuthEonMySQLUsername eonweb
-	AuthEonMySQLPassword root66
-	AuthEonMySQLDB eonweb
-	AuthEonMySQLTableSID sessions,users,groupright
-	AuthEonMySQLFieldUID sessions.user_id
-	AuthEonMySQLTableSIDCondition "`sessions`.`session_id`=$session_id AND `sessions`.`user_id`=$user_id AND `users`.`user_id`=$user_id AND `users`.`user_name`=$user_name AND `users`.`group_id`=$group_id AND `groupright`.`group_id`=$group_id AND `groupright`.`tab_2`='1'"
-	AuthEonPageLogin /login.php
-	AuthEonSessionCookies On
+	AuthrgmAuthoritative On
+	AuthrgmMySQLSocket /var/lib/mysql/mysql.sock
+	AuthrgmMySQLUsername rgminternal
+	AuthrgmMySQLPassword 0rd0-c0m1735-b47h0n143
+	AuthrgmMySQLDB rgmweb
+	AuthrgmMySQLTableSID sessions,users,groupright
+	AuthrgmMySQLFieldUID sessions.user_id
+	AuthrgmMySQLTableSIDCondition "`sessions`.`session_id`=$session_id AND `sessions`.`user_id`=$user_id AND `users`.`user_id`=$user_id AND `users`.`user_name`=$user_name AND `users`.`group_id`=$group_id AND `groupright`.`group_id`=$group_id AND `groupright`.`tab_2`='1'"
+	AuthrgmPageLogin /login.php
+	AuthrgmSessionCookies On
 	Require valid-user
 </Directory>
