--- a/SOURCES/nagiosbp-rgm/nagios-bp.conf
+++ b/SOURCES/nagiosbp-rgm/nagios-bp.conf
@@ -1,7 +1,9 @@
 #
-# EyesOfNetwork
+# RGM
 #
-eon = localhost;ssh & localhost;process_ged & localhost;mysql
-display 1;eon;EyesOfNetwork
-info_url eon;/
-external_info eon;uptime
+rgm_server = localhost.localdomain;Hoststatus & localhost.localdomain;processor & localhost.localdomain;service_ged & localhost.localdomain;service_mariadb
+display 0;rgm_server;rgm_server
+info_url rgm_server;/
+RGM = rgm_server
+display 1;RGM;RGM
+info_url RGM;/
