Fix initial configuration

--- a/SOURCES/nagiosbp-rgm/nagios-bp.conf
+++ b/SOURCES/nagiosbp-rgm/nagios-bp.conf
@@ -1,7 +1,7 @@
 #
 # RGM
 #
-rgm_server = localhost.localdomain;Hoststatus & localhost.localdomain;processor & localhost.localdomain;service_ged & localhost.localdomain;service_mariadb
+rgm_server = localhost.localdomain;Hoststatus & localhost.localdomain;memory & localhost.localdomain;ged_status & localhost.localdomain;processor & localhost.localdomain;mysql_status & localhost.localdomain;httpd_status
 display 0;rgm_server;rgm_server
 info_url rgm_server;/
 RGM = rgm_server
